Arreglo de la primera section

--- a/PaginaGatos/index.html
+++ b/PaginaGatos/index.html
@@ -10,8 +10,8 @@
 
     <section>
         <h2>Fotos de gatos</h2>
-        <p>Ver mas <a href="https://www.pinterest.com.mx/search/pins/?q=cat&rs=typed" target="_blank">fotos de gatos</a> en Pinterest</p>
-        <img src="https://i.pinimg.com/originals/67/a4/f3/67a4f3dbecffdbe1107f38c70ad7b874.jpg" alt="Un gato con broche en el pelaje">
+        <p>Ver mas <a href="https://freecatphotoapp.com" target="_blank">fotos de gatos</a> en la galería</p>
+        <a target="_blank" href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="Un lindo gato naranja acostado boca arriba."></a>
     </section>
 </body>
 </html>
