--- a/PaginaGatos/index.html
+++ b/PaginaGatos/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotos de gatos</title>
+    <title>CatPhotoApp</title>
 </head>
 <body>
-    <h1>Pagina de fotos de gatos</h1>
+    <h1>Cat Photos</h1>
 
     <section>
         <h2>Fotos de gatos</h2>
-        <p>Ver mas <a href="https://freecatphotoapp.com" target="_blank">fotos de gatos</a> en la galería</p>
-        <a target="_blank" href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="Un lindo gato naranja acostado boca arriba."></a>
+        <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
+        <a target="_blank" href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+    </section>
+
+    <section>
+        <h2>Cat Lists</h2>
+            <h3>Things cats love:</h3>
+                <ul>
+                    <li>Cat nip</li>
+                    <li>Laser Pointers</li>
+                    <li>Lasagna</li>
+                </ul>
+
+                <figure>
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+                    <figcaption>Cats <em>Love</em> lasagna.</figcaption>
+                </figure>
+
+            <h3>Top 3 things cats hate:</h3>
+                <ol>
+                    <li>Flea treatment</li>
+                    <li>Thunder</li>
+                    <li>Other cats</li>
+                </ol>
+
+                <figure>
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+                    <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
+                </figure>
     </section>
 </body>
 </html>
