--- a/CatsPage/index.html
+++ b/CatsPage/index.html
@@ -6,59 +6,65 @@
     <title>CatPhotoApp</title>
 </head>
 <body>
-    <h1>Cat Photos</h1>
+    <main>
+        <h1>Cat Photos</h1>
 
-    <section>
-        <h2>Fotos de gatos</h2>
-        <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
-        <a target="_blank" href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-    </section>
+        <section>
+            <h2>Fotos de gatos</h2>
+            <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
+            <a target="_blank" href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        </section>
 
-    <section>
-        <h2>Cat Lists</h2>
-            <h3>Things cats love:</h3>
-                <ul>
-                    <li>Cat nip</li>
-                    <li>Laser Pointers</li>
-                    <li>Lasagna</li>
-                </ul>
+        <section>
+            <h2>Cat Lists</h2>
+                <h3>Things cats love:</h3>
+                    <ul>
+                        <li>Cat nip</li>
+                        <li>Laser Pointers</li>
+                        <li>Lasagna</li>
+                    </ul>
 
-                <figure>
-                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-                    <figcaption>Cats <em>Love</em> lasagna.</figcaption>
-                </figure>
+                    <figure>
+                        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+                        <figcaption>Cats <em>Love</em> lasagna.</figcaption>
+                    </figure>
 
-            <h3>Top 3 things cats hate:</h3>
-                <ol>
-                    <li>Flea treatment</li>
-                    <li>Thunder</li>
-                    <li>Other cats</li>
-                </ol>
+                <h3>Top 3 things cats hate:</h3>
+                    <ol>
+                        <li>Flea treatment</li>
+                        <li>Thunder</li>
+                        <li>Other cats</li>
+                    </ol>
 
-                <figure>
-                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-                    <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
-                </figure>
-    </section>
+                    <figure>
+                        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+                        <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
+                    </figure>
+        </section>
 
-    <section>
-        <h2>Cat Form</h2>
-            <form action="https://freecatphotoapp.com/submit-cat-photo">
-                <fieldset>
-                    <legend>Is you cat an indoor or outdoor cat?</legend>
-                        <label for="indoor"><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked>Indoor</label>
-                        <label for="outdoor"><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
-                </fieldset>
+        <section>
+            <h2>Cat Form</h2>
+                <form action="https://freecatphotoapp.com/submit-cat-photo">
+                    <fieldset>
+                        <legend>Is you cat an indoor or outdoor cat?</legend>
+                            <label for="indoor"><input type="radio" id="indoor" name="indoor-outdoor" value="indoor" checked>Indoor</label>
+                            <label for="outdoor"><input type="radio" id="outdoor" name="indoor-outdoor" value="outdoor">Outdoor</label>
+                    </fieldset>
 
-                <fieldset>
-                    <legend>What's your cat's personality?</legend>
-                    <label for="loving"><input type="checkbox" id="loving" name="personality" value="loving" checked>Loving</label>
-                    <label for="lazy"><input type="checkbox" id="lazy" name="personality" value="lazy">Lazy</label>
-                    <label for="energetic"><input type="checkbox" id="energetic" name="personality" value="energetic">Energetic</label>
-                </fieldset>
-                    <input type="text" name="catpshotourl" placeholder="Cat photo URL" required>
-                        <button type="submit">Submit</button>
-            </form>
-    </section>
+                    <fieldset>
+                        <legend>What's your cat's personality?</legend>
+                        <label for="loving"><input type="checkbox" id="loving" name="personality" value="loving" checked>Loving</label>
+                        <label for="lazy"><input type="checkbox" id="lazy" name="personality" value="lazy">Lazy</label>
+                        <label for="energetic"><input type="checkbox" id="energetic" name="personality" value="energetic">Energetic</label>
+                    </fieldset>
+                        <input type="text" name="catpshotourl" placeholder="Cat photo URL" required>
+                            <button type="submit">Submit</button>
+                </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>No Copyright - <a target="_blank" href="https://www.freecodecamp.org">FreeCodeCamp.org</a></p>
+    </footer>
 </body>
 </html>
