--- a/CafeMenu/index.html
+++ b/CafeMenu/index.html
@@ -7,6 +7,62 @@
     <title>Cafe Menu</title>
 </head>
 <body>
-    
+    <div>
+        <main>
+            <h1>CAMPER CAFE</h1>
+            <p>Est. 2020</p>
+
+            <section>
+                <h2>Coffee</h2>
+
+                <article>
+                    <p>French Vanilla</p><p>3.00</p>
+                </article>
+
+                <article>
+                    <p>Caramel Macchiato</p><p>3.75</p>
+                </article>
+
+                <article>
+                    <p>Pumpkin Spice</p><p>3.50</p>
+                </article>
+
+                <article>
+                    <p>Hazelnut</p><p>4.00</p>
+                </article>
+
+                <article>
+                    <p>Mocha</p><p>4.50</p>
+                </article>
+            </section>
+
+            <section>
+                <h2>Desserts</h2>
+
+                <article>
+                    <p>Donut</p><p>1.50</p>
+                </article>
+
+                <article>
+                    <p>Cherry Pie</p><p>2.75</p>
+                </article>
+
+                <article>
+                    <p>Cheesecake</p><p>3.00</p>
+                </article>
+
+                <article>
+                    <p>Cinnamon Roll</p><p>2.50</p>
+                </article>
+            </section>
+        </main>
+
+        <hr>
+
+        <footer>
+            <p><a>Visit our website</a></p>
+            <p>123 Free Code Camp Drive</p>
+        </footer>
+    </div>
 </body>
 </html>
