--- a/CafeMenu/index.html
+++ b/CafeMenu/index.html
@@ -60,7 +60,7 @@
         <hr class="bottom-line">
 
         <footer>
-            <p><a>Visit our website</a></p>
+            <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a></p>
             <p class="address">123 Free Code Camp Drive</p>
         </footer>
     </div>
