--- a/CafeMenu/index.html
+++ b/CafeMenu/index.html
@@ -11,9 +11,11 @@
         <main>
             <h1>CAMPER CAFE</h1>
             <p class="established">Est. 2020</p>
+            <hr>
 
             <section>
                 <h2>Coffee</h2>
+                <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon">
 
                 <article class="item">
                     <p class="flavor">French Vanilla</p><p class="price">3.00</p>
@@ -38,6 +40,7 @@
 
             <section>
                 <h2>Desserts</h2>
+                <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon">
 
                 <article class="item">
                     <p class="dessert">Donut</p><p class="price">1.50</p>
