--- a/CssColorMarkers/index.html
+++ b/CssColorMarkers/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CSS Color Markers</title>
+    <title>Colored Markers</title>
 </head>
 <body>
-    
+    <h1>CSS Color Markers</h1>
+        <div class="container">
+
+        </div>
 </body>
 </html>
