--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -7,6 +7,17 @@
     <title>Registration Form</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Registration Form</h1>
+        <p>Please fill out this form with the required information</p>
+        <form method="post" action="https://register-demo.freecodecamp.org">
+            <fieldset>
+                <label for="first-name">Enter Your First Name: <input type="text" id="first-name" name="first-name"></label>
+                <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" name="last-name"></label>
+                <label for="email">Enter Your Email: <input type="email" id="email" name="email"></label>
+                <label for="password">Create a New Password: <input type="password" id="password" name="password"></label>
+            </fieldset>
+        </form>
+    </main>
 </body>
 </html>
