--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -11,11 +11,18 @@
         <h1>Registration Form</h1>
         <p>Please fill out this form with the required information</p>
         <form method="post" action="https://register-demo.freecodecamp.org">
+
             <fieldset>
-                <label for="first-name">Enter Your First Name: <input type="text" id="first-name" name="first-name"></label>
-                <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" name="last-name"></label>
-                <label for="email">Enter Your Email: <input type="email" id="email" name="email"></label>
-                <label for="password">Create a New Password: <input type="password" id="password" name="password"></label>
+                <label for="first-name">Enter Your First Name: <input type="text" id="first-name" name="first-name" required></label>
+                <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" name="last-name" required></label>
+                <label for="email">Enter Your Email: <input type="email" id="email" name="email" required></label>
+                <label for="new-password">Create a New Password: <input type="new-password" id="new-password" name="new-password" pattern="[a-z0-5]{8,}" required></label>
+            </fieldset>
+
+            <fieldset>
+                <label for="personal-account"><input type="radio" id="personal-account" name="account-type" required> Personal Account</label>
+                <label for="business-account"><input type="radio" id="business-account" name="account-type" required> Business Account</label>
+                <label for="terms-and-conditions"><input type="checkbox" id="terms-and-conditions" name="terms-and-conditions" required> I accept the <a target="_blank" href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             </fieldset>
         </form>
     </main>
