third fieldset and inputs

--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -24,6 +24,23 @@
                 <label for="business-account"><input type="radio" id="business-account" name="account-type" required> Business Account</label>
                 <label for="terms-and-conditions"><input type="checkbox" id="terms-and-conditions" name="terms-and-conditions" required> I accept the <a target="_blank" href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             </fieldset>
+
+            <fieldset>
+                <label for="profile-picture">Upload a profile picture: <input id="profile-picture" name="profile-picture" type="file"></label>
+                <label for="age">Input your age(years): <input id="age" name="age" type="number" min="13" max="120"></label>
+                <label for="referrer">How did you hear about us? 
+                    <select id="referrer" name="referrer">
+                        <option value="">(select one)</option>
+                        <option value="1">freeCodeCamp News</option>
+                        <option value="2">freeCodeCamp YouTube Channel</option>
+                        <option value="3">freeCodeCamp Forum</option>
+                        <option value="4">Other</option>
+                    </select>
+                </label>
+                <label for="bio">Provide a bio: 
+                    <textarea rows="3" cols="30" id="bio" name="bio" placeholder="I like coding on the beach..."></textarea>
+                </label>
+            </fieldset>
         </form>
     </main>
 </body>
