--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -20,9 +20,9 @@
             </fieldset>
 
             <fieldset>
-                <label for="personal-account"><input type="radio" id="personal-account" name="account-type" required> Personal Account</label>
-                <label for="business-account"><input type="radio" id="business-account" name="account-type" required> Business Account</label>
-                <label for="terms-and-conditions"><input type="checkbox" id="terms-and-conditions" name="terms-and-conditions" required> I accept the <a target="_blank" href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+                <label for="personal-account"><input type="radio" id="personal-account" name="account-type" class="inline"> Personal Account</label>
+                <label for="business-account"><input type="radio" id="business-account" name="account-type" class="inline"> Business Account</label>
+                <label for="terms-and-conditions"><input type="checkbox" id="terms-and-conditions" name="terms-and-conditions" class="inline" required> I accept the <a target="_blank" href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             </fieldset>
 
             <fieldset>
@@ -41,6 +41,7 @@
                     <textarea rows="3" cols="30" id="bio" name="bio" placeholder="I like coding on the beach..."></textarea>
                 </label>
             </fieldset>
+            <input type="button" value="Submit">
         </form>
     </main>
 </body>
