--- a/RothkoPainting/index.html
+++ b/RothkoPainting/index.html
@@ -10,8 +10,9 @@
 
     <div class="frame">
         <div class="canvas">
-            <div class="one">
-            </div>
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
         </div>
     </div>
 
