--- a/PhotoGallery/index.html
+++ b/PhotoGallery/index.html
@@ -7,6 +7,21 @@
     <title>Photo Gallery</title>
 </head>
 <body>
+    <header class="header">
+        <h1>css flexbox photo gallery</h1>
+    </header>
+    
+    <div class="gallery">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="A white and brown cat sleeping">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="one cat lying in the floor">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="A cat see at down">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="A cat sleeping between the sheets">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="A small white Siamese cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="A two little cats">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="A cat under the sheets">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="An older orange cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="Two cats, one white and one black">
+    </div>
     
 </body>
 </html>
