--- a/AccessibilityQuiz/index.html
+++ b/AccessibilityQuiz/index.html
@@ -8,6 +8,16 @@
     <title>Accessibility Quiz</title>
 </head>
 <body>
-    
+    <header>
+        <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" id="logo">
+        <h1>HTML/CSS Quiz</h1>
+        <nav>
+            
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
 </body>
 </html>
