--- a/AccessibilityQuiz/index.html
+++ b/AccessibilityQuiz/index.html
@@ -12,7 +12,11 @@
         <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" id="logo">
         <h1>HTML/CSS Quiz</h1>
         <nav>
-            
+            <ul>
+                <li><a>INFO</a></li>
+                <li><a>HTML</a></li>
+                <li><a>CSS</a></li>
+            </ul>
         </nav>
     </header>
 
