--- a/AccessibilityQuiz/index.html
+++ b/AccessibilityQuiz/index.html
@@ -13,15 +13,41 @@
         <h1>HTML/CSS Quiz</h1>
         <nav>
             <ul>
-                <li><a>INFO</a></li>
-                <li><a>HTML</a></li>
-                <li><a>CSS</a></li>
+                <li><a href="#student-info">INFO</a></li>
+                <li><a href="#html-questions">HTML</a></li>
+                <li><a href="#css-questions">CSS</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <form method="post" action="https://freecodecamp.org/practice-project/accessibility-quiz">
+            <section role="region" aria-labelledby="student-info">
+                <h2 id="student-info">Student Info</h2>
+                <div class="info">
+                    <label for="student-name">Name:</label>
+                    <input id="student-name" type="text" name="student-name" placeholder="e.g. Quincy Larson">
+                </div>
 
+                <div class="info">
+                    <label for="student-email">Email:</label>
+                    <input id="student-email" type="email" name="student-email">
+                </div>
+
+                <div class="info">
+                    <label for="birth-date">D.O.B.<span class="sr-only">(Date of Birth)</span></label>
+                    <input id="birth-date" type="date" name="birth-date">
+                </div>
+            </section>
+
+            <section role="region" aria-labelledby="html-questions">
+                <h2 id="html-questions">HTML</h2>
+            </section>
+
+            <section role="region" aria-labelledby="css-questions">
+                <h2 id="css-questions">CSS</h2>
+            </section>
+        </form>
     </main>
 </body>
 </html>
