--- a/AccessibilityQuiz/index.html
+++ b/AccessibilityQuiz/index.html
@@ -28,12 +28,10 @@
                     <label for="student-name">Name:</label>
                     <input id="student-name" type="text" name="student-name" placeholder="e.g. Quincy Larson">
                 </div>
-
                 <div class="info">
                     <label for="student-email">Email:</label>
                     <input id="student-email" type="email" name="student-email">
                 </div>
-
                 <div class="info">
                     <label for="birth-date">D.O.B.<span class="sr-only">(Date of Birth)</span></label>
                     <input id="birth-date" type="date" name="birth-date">
@@ -42,6 +40,26 @@
 
             <section role="region" aria-labelledby="html-questions">
                 <h2 id="html-questions">HTML</h2>
+                <div class="question-block">
+                    <p>1</p>
+                    <fieldset class="question" name="html-question-one">
+                        <legend>The legend element represents a caption for the content of its parent fieldset element</legend>
+                        <ul class="answers-list">
+                            <li><label for="q1-a1"><input id="q1-a1" type="radio" value="true" name="q1"> True</label></li>
+                            <li><label for="q1-a2"><input id="q1-a2" type="radio" value="false" name="q1"> False</label></li>
+                        </ul>
+                    </fieldset>
+                </div>
+                <div class="question-block">
+                    <p>2</p>
+                    <fieldset class="question" name="html-question-two">
+                        <legend>A label element nesting an input element is required to have a for attribute with the same value as the input's id</legend>
+                        <ul class="answers-list">
+                            <li><label for="q2-a1"><input id="q2-a1" type="radio" value="true" name="q2"> True</label></li>
+                            <li><label for="q2-a2"><input id="q2-a2" type="radio" value="false" name="q2"> False</label></li>
+                        </ul>
+                    </fieldset>
+                </div>
             </section>
 
             <section role="region" aria-labelledby="css-questions">
