--- a/AccessibilityQuiz/index.html
+++ b/AccessibilityQuiz/index.html
@@ -13,9 +13,9 @@
         <h1>HTML/CSS Quiz</h1>
         <nav>
             <ul>
-                <li><a href="#student-info">INFO</a></li>
-                <li><a href="#html-questions">HTML</a></li>
-                <li><a href="#css-questions">CSS</a></li>
+                <li><a href="#student-info" accesskey="i">INFO</a></li>
+                <li><a href="#html-questions" accesskey="h">HTML</a></li>
+                <li><a href="#css-questions" accesskey="c">CSS</a></li>
             </ul>
         </nav>
     </header>
@@ -79,12 +79,21 @@
                         <label for="css-questions">Do you have any questions:</label>
                     </div>
                     <div class="answer">
-                        <textarea id="css-questions" row="5" cols="24" placeholder="Who is flexbox..."></textarea>
+                        <textarea id="css-questions" rows="5" cols="24" placeholder="Who is flexbox..."></textarea>
                     </div>
                 </div>
             </section>
             <button type="submit">Send</button>
         </form>
     </main>
+
+    <footer>
+        <address>
+            <a href="https://freecodecamp.org">freeCodeCamp</a><br>
+            San Francisco<br>
+            California<br>
+            USA
+        </address>
+    </footer>
 </body>
 </html>
