--- a/BalanceSheet/index.html
+++ b/BalanceSheet/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Balance Sheet</title>
 </head>
 <body>
-    
+    <main>
+        <section>
+            <h1>
+                <span class="flex">
+                    <span>AcmeWidgetCorp</span>
+                    <span>Balance Sheet</span>
+                </span>
+        </h1>
+
+        <div id="years" aria-hidden="true">
+            <span class="year">2019</span>
+            <span class="year">2020</span>
+            <span class="year">2021</span>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
