--- a/BalanceSheet/index.html
+++ b/BalanceSheet/index.html
@@ -70,9 +70,9 @@
                 <thead>
                     <tr>
                         <td></td>
-                        <th><span class="sr-only"></span>2019</th>
-                        <th><span class="sr-only"></span>2020</th>
-                        <th><span class="sr-only"></span>2021</th>
+                        <th><span class="sr-only">2019</span></th>
+                        <th><span class="sr-only">2020</span></th>
+                        <th><span class="sr-only">2021</span></th>
                     </tr>
                 </thead>
 
